--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,6 @@ ij_formatter_tags_enabled = false
 ij_smart_tabs = false
 ij_visual_guides = none
 ij_wrap_on_typing = false
-ij_typescript_spaces_within_brackets = true
 
 [.editorconfig]
 ij_editorconfig_align_group_field_declarations = false
@@ -163,7 +162,7 @@ ij_typescript_spaces_around_multiplicative_operators = true
 ij_typescript_spaces_around_relational_operators = true
 ij_typescript_spaces_around_shift_operators = true
 ij_typescript_spaces_around_unary_operator = false
-ij_typescript_spaces_within_array_initializer_brackets = true
+ij_typescript_spaces_within_array_initializer_brackets = false
 ij_typescript_spaces_within_brackets = false
 ij_typescript_spaces_within_catch_parentheses = false
 ij_typescript_spaces_within_for_parentheses = false
